--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>AMAN KUMAR</h1>
-      <p>I'm <span class="typed" data-typed-items="Android Developer...,Freelancer...,Software Developer..."></span></p>
+      <p>I'm <span class="typed" data-typed-items="Student of Information Technology...<br>NIET COLLAGE GR NOIDA,BEGINNER...<BR>ANDROID DEVELOPMENT<br> JAVA <br>WEB DEVELOPMENT<br>MACHINE LEARNING<br>PYTHON,Freelancer..."></span></p>
       <div class="social-links">
         <a href="https://mobile.twitter.com/amanoffical1234" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/Amanchaursiya2000" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -98,7 +98,7 @@
               </div>
             </div>
             <p>
-              <!--xxxxxxxxxxxxxx-->
+              
             </p>
           </div>
         </div>
