--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Software Engineer &amp; Web Developer.</h3>
+            <h3>Software Engineer &amp; Web Developer.</h3><br><br>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
