--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
         </div>
 
-      <!--</div>
+      </div>
     </section>
     <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
@@ -148,7 +148,7 @@
             </div>
           </div>
 
-        </div>-->
+        </div>
 
       </div>
     </section>
