--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>To work in a symbiotic relationship with a reputed company where I can get fair and due
-            opportunity of self-development and motivation while working for corporate growth of company.</p>
+          <!--<p>To work in a symbiotic relationship with a reputed company where I can get fair and due
+            opportunity of self-development and motivation while working for corporate growth of company.</p>-->
         </div>
 
         <div class="row">
